@@ -1,3 +1,7 @@
+2008-08-02  Jason Rumney  <jasonr@gnu.org>
+
+        * w32font.c (compute_metrics): Don't mess with glyph_idx setting here.
+
 2008-08-02  Eli Zaretskii  <eliz@gnu.org>
 
 	* alloc.c (NSTATICS): Bump to 0x640.
